manifests/workloads/openfaas-ingress/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openfaas-danmanners-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: openfaas.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app: gateway
spec:
  type: ExternalName
  externalName: danmanners.com
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: openfaas
  labels:
    app: gateway
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: gateway
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: openfaas-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`openfaas.danmanners.com`)
      kind: Rule
      services:
        - name: gateway
          port: 8080
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: openfaas-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`openfaas.danmanners.com`)
      kind: Rule
      services:
        - name: gateway
          port: 8080
  tls:
    secretName: openfaas-cert
